--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 Karena di Skill Classroom, kegiatan belajar dirancang secara simpel, mudah dan interaktif.
               </p>
               <div class="text-center">
-                <a href="about.html" class="more-btn">Pelajari Selengkapnya<i class="bx bx-chevron-right"></i></a>
+                <a href="#" class="more-btn">Pelajari Selengkapnya<i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
           </div>
@@ -305,7 +305,7 @@
                   <p class="price">Gratis</p>
                 </div>
 
-                <h3><a href="course-details.html">Google Docs [Dasar]</a></h3>
+                <h3><a href="#">Google Docs [Dasar]</a></h3>
                 <p>Dasar-dasar aplikasi pengolah kata Google Docs untuk kebutuhan pencatatan sehari-hari.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
