--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.ico" type="image/x-icon" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" type="image/x-icon" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
