--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/banner.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Skill Classroom merupakan platform belajar teknologi aplikasi yang dirancang secara simpel, mudah, murah dan interaktif.</h3>
