--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 Karena di Skill Classroom, kegiatan belajar dirancang secara simpel, mudah dan interaktif.
               </p>
               <div class="text-center">
-                <a href="#" class="more-btn">Pelajari Selengkapnya<i class="bx bx-chevron-right"></i></a>
+                <a href="about.html" class="more-btn">Pelajari Selengkapnya<i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
           </div>
