Mulai Bersama Kami

--- a/about.html
+++ b/about.html
@@ -103,10 +103,10 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Skill Classroom merupakan platform belajar teknologi aplikasi yang dirancang secara simpel, mudah, murah dan interaktif.</h3>
-            <p class="fst-italic">
+            <!-- <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
-            </p>
+            </p> -->
             <ul>
               <li><i class="bi bi-check-circle"></i>Simpel, karena pembelajar dilakukan di google classroom, dimana classroom merupakan platform belajar yang saat ini populer digunakan para pelajar dan guru di indonesia</li>
               <li><i class="bi bi-check-circle"></i>Mudah, karena materi pembelajaran kami susun secara sistematis dan dengan bahasa yang mudah dimengerti mulai dari kalangan remaja dan dewasa.</li>
@@ -114,7 +114,7 @@
               <li><i class="bi bi-check-circle"></i>Interaktif, karena materi pembelajaran kami lebih titik beratkan kepada praktik.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              Tertarik untuk mencobanya? <a href="https://www.skillclassroom.id/index.html#popular-courses"><b>Mulai Gratis!</b></a>
             </p>
 
           </div>
