--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                   <p class="price">Gratis</p>
                 </div>
 
-                <h3><a href="google-docs-pemula.html">Google Docs [Dasar]</a></h3>
+                <h3><a href="#">Google Docs [Dasar]</a></h3>
                 <p>Dasar-dasar aplikasi pengolah kata Google Docs untuk kebutuhan pencatatan sehari-hari.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
